Migrate ppw-table row animation away from deprecated animations on component metadata

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.scss
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.scss
@@ -123,3 +123,18 @@
         transform: rotate(180deg);
     }
 }
+
+.ppw-table-row-enter {
+    animation: slide-in-row 0.25s ease-in-out;
+}
+
+@keyframes slide-in-row {
+    from {
+        opacity: 0;
+        transform: translateY(-10%);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
