--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -157,8 +157,7 @@
         <tr mat-header-row *matHeaderRowDef="columnNames(); sticky: !!options()?.header?.sticky"></tr>
         <tr
             mat-row
-            [@.disabled]="disableAnimations()"
-            @rowsAnimation
+            [class.ppw-table-row-enter]="!disableAnimations()"
             *matRowDef="let row; columns: columnNames()"
             cdkDrag
             [cdkDragDisabled]="dragDisabled"
