--- a/projects/ppwcode/ng-common-components/src/lib/search-filter/search-filter.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/search-filter/search-filter.component.html
@@ -7,7 +7,7 @@
     </mat-card-content>
     <mat-card-actions align="end" class="gap-8">
         @if (allowReset()) {
-            <button mat-button (click)="reset.emit()">{{ resetLabel() }}</button>
+            <button mat-button (click)="reset.emit()" [disabled]="clearDisabled()">{{ resetLabel() }}</button>
         }
         <button mat-raised-button color="primary" (click)="search.emit()" [disabled]="submitDisabled()">
             {{ searchLabel() }}
