Use the new (future proof) search trigger

--- a/src/app/table/table-demo.component.html
+++ b/src/app/table/table-demo.component.html
@@ -4,7 +4,7 @@
             <h1>Filter table</h1>
             @if (searchForm) {
                 <ppw-search-filter
-                    (search)="performSearch()"
+                    (performSearch)="performSearch()"
                     (clear)="performReset()"
                     [submitDisabled]="searchForm.invalid"
                     [clearDisabled]="(pending$ | async) === true"
