Deprecate PagedEntities.pageIndex in favor of PagedEntities.page

--- a/projects/ppwcode/ng-wireframe/src/lib/pagination-bar/pagination-bar.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/pagination-bar/pagination-bar.component.html
@@ -2,7 +2,7 @@
     (page)="handlePageEvent($event)"
     [length]="entity().totalCount"
     [pageSize]="entity().pageSize"
-    [pageIndex]="entity().pageIndex - 1"
+    [pageIndex]="entity().page - 1"
     [pageSizeOptions]="pageSizeOptions()"
     [showFirstLastButtons]="showFirstLastButtons()"
     [hidePageSize]="hidePageSize()"
