--- a/src/styles.scss
+++ b/src/styles.scss
@@ -110,6 +110,10 @@ body {
     --ppw-dashboard-items-table-background-color: #6eb343;
     --ppw-dashboard-wrapper-container-vertical-margin: 32px;
     --ppw-dashboard-items-card-margin: 8px;
+
+    --ppw-breadcrumb-background-color: whitesmoke;
+    --ppw-breadcrumb-text-color: #18428c;
+    --ppw-breadcrumb-text-hover-color: #6390df;
 }
 
 ppw-wireframe.flat {
