Correctly ignore the eslint warning

--- a/projects/ppwcode/ng-dialogs/src/lib/confirmation-dialog/confirmation-dialog.component.html
+++ b/projects/ppwcode/ng-dialogs/src/lib/confirmation-dialog/confirmation-dialog.component.html
@@ -1,4 +1,4 @@
-<!-- eslint-disable-next-line -->
+<!-- eslint-disable-next-line @angular-eslint/template/elements-content -->
 <h3 mat-dialog-title [translate]="data.titleKey" [translateParams]="data.titleParams"></h3>
 <mat-dialog-content
     class="mat-typography"
