Add support to disable row selection by passing a custom function as a parameter to the table option

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -55,6 +55,7 @@
                         [style.width]="options()?.columns?.widths?.['rowSelection']"
                         (change)="$event ? selection.toggle(row) : null"
                         [checked]="selection.isSelected(row)"
+                        [disabled]="isRowSelectionDisabled(row)"
                     >
                     </mat-checkbox>
                 </td>
