--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -41,7 +41,7 @@
                 <th mat-header-cell *matHeaderCellDef>
                     <mat-checkbox
                         color="primary"
-                        [disabled]="dataSource().data.length === 0"
+                        [disabled]="selectableRows().length === 0"
                         [style.width]="options()?.columns?.widths?.['rowSelection']"
                         (change)="$event ? masterToggle() : null"
                         [checked]="isAllSelected()"
@@ -55,7 +55,7 @@
                         [style.width]="options()?.columns?.widths?.['rowSelection']"
                         (change)="$event ? selection.toggle(row) : null"
                         [checked]="selection.isSelected(row)"
-                        [disabled]="isRowSelectionDisabled(row)"
+                        [disabled]="!row.selectable"
                     >
                     </mat-checkbox>
                 </td>
