[20->21] Resolve warnings emitted during ng serve

--- a/projects/ppwcode/ng-async/src/lib/async-result/async-result.component.html
+++ b/projects/ppwcode/ng-async/src/lib/async-result/async-result.component.html
@@ -13,10 +13,7 @@
                     }
                 } @else {
                     <ng-container
-                        *ngTemplateOutlet="
-                            successTemplate() ?? null;
-                            context: { $implicit: result, entity: result.entity }
-                        "
+                        *ngTemplateOutlet="successTemplate(); context: { $implicit: result, entity: result.entity }"
                     ></ng-container>
                 }
             }
