Add option to disable sort clear on columns

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -75,6 +75,7 @@
                     mat-header-cell
                     mat-sort-header
                     [disabled]="!column.sortable()"
+                    [disableClear]="column.disableSortClear()"
                     [style.width]="options()?.columns?.widths?.[column.name]"
                     [ngStyle]="options()?.header?.styles?.[column.name]?.()"
                     *matHeaderCellDef
