Disable row drag when enableRowDrag is false

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -157,6 +157,7 @@
         <tr
             mat-row
             cdkDrag
+            [cdkDragDisabled]="!enableRowDrag()"
             *matRowDef="let row; columns: columnNames()"
             [class.ppw-table-row-enter]="!disableAnimations()"
             [class.highlight]="options()?.rows?.highlightOnHover"
