--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.scss
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.scss
@@ -1,5 +1,17 @@
 @use '@angular/material' as mat;
 
+:host ::ng-deep th[style*='text-align: right'] {
+    .mat-sort-header-container {
+        justify-content: end;
+    }
+}
+
+:host ::ng-deep th[style*='text-align: center'] {
+    .mat-sort-header-container {
+        justify-content: center;
+    }
+}
+
 .ppw-table-container {
     overflow: auto;
 
