When a header column is right aligned, show the sort icon before the header label

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -65,6 +65,7 @@
                 <th
                     mat-header-cell
                     mat-sort-header
+                    [arrowPosition]="arrowPositions()[column.name]"
                     [disabled]="!column.sortable()"
                     [disableClear]="column.disableSortClear()"
                     [style.width]="options()?.columns?.widths?.[column.name]"
