Numeric columns should be aligned to right automatically.

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.scss
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.scss
@@ -2,6 +2,7 @@
 
 :host {
     ::ng-deep {
+        th.ppw-column-type-number,
         th[style*='text-align: right'] {
             .mat-sort-header-container {
                 justify-content: end;
